--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,32 +1,33 @@
 <mat-card>
-    <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <form [formGroup]="form" (submit)="onAddPost()" *ngIf="!isLoading">
         <mat-form-field>
             <input
             matInput
-            ngModel
-            required
-            minlength="3"
-            name="title"
-            placeholder="Post Title"
-            #title="ngModel">
-            <mat-error *ngIf="title.invalid">Tilel is required</mat-error>
+            formControlName="title"
+            placeholder="Post Title">
+            <mat-error *ngIf="form.get('title').invalid">Tilel is required</mat-error>
         </mat-form-field>
+        <div>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)">
+        </div>
+        <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+            <img [src]="imagePreview" [alt]="form.value.title">
+        </div>
         <mat-form-field>
             <textarea
             matInput
             rows="6"
-            ngModel
-            required
-            name="content"
-            placeholder="Post Content"
-            #content="ngModel"></textarea>
-            <mat-error *ngIf="content.invalid">Content is required</mat-error>
+            formControlName="content"
+            placeholder="Post Content"></textarea>
+            <mat-error *ngIf="form.get('content').invalid">Content is required</mat-error>
         </mat-form-field>
         <button 
             mat-raised-button
             color="accent"
-            [disabled]="postForm.invalid"
-            type="submit">Save Post
+            [disabled]="form.invalid"
+            type="submit"> {{isUpade ? 'Update' : 'Save'}}
         </button>
     </form>
 </mat-card>
