--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,16 +1,19 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
     <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
             <mat-panel-title>
                 {{post.title}}
             </mat-panel-title>
         </mat-expansion-panel-header>
-        <p>{{post.content}}</p>
+        <div class="post-image">
+            <img [src]="post.imagePath" [alt]="post.title">
+        </div>
+        <p>{{post.content}} - {{post.imagePath}}</p>
         <mat-action-row>
-            <button mat-button color="primary">EDIT</button>
+            <a mat-button color="primary" [routerLink]="['/update', post.id]">EDIT</a>
             <button mat-button color="warn" (click)="deletePost(post.id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
-
-<p class="info-text mat-body-1" *ngIf="posts.length == 0">No posts added yet!</p>
+<p class="info-text mat-body-1" *ngIf="posts.length == 0&& !isLoading">No posts added yet!</p>
