--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,17 @@
 <mat-toolbar color="primary">
     <span><a routerLink='/'>My Messages</a></span>
     <ul>
-        <li>
+        <li *ngIf="authenticated">
             <a mat-button routerLink='/create' routerLinkActive="mat-accent">New Post</a>
+        </li>
+        <li *ngIf="!authenticated">
+            <a mat-button routerLink='/login' routerLinkActive="mat-accent">Login</a>
+        </li>
+        <li *ngIf="!authenticated">
+            <a mat-button routerLink='/signup' routerLinkActive="mat-accent">Signup</a>
+        </li>
+        <li *ngIf="authenticated">
+            <button mat-button (click)="onLogout()">Logout</button>
         </li>
     </ul>
 </mat-toolbar>
