--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -9,8 +9,8 @@
         <div class="post-image">
             <img [src]="post.imagePath" [alt]="post.title">
         </div>
-        <p>{{post.content}} - {{post.imagePath}}</p>
-        <mat-action-row>
+        <p>{{post.content}}</p>
+        <mat-action-row *ngIf="authenticated && userId === post.creator">
             <a mat-button color="primary" [routerLink]="['/update', post.id]">EDIT</a>
             <button mat-button color="warn" (click)="deletePost(post.id)">DELETE</button>
         </mat-action-row>
