--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -27,7 +27,7 @@
             mat-raised-button
             color="accent"
             [disabled]="form.invalid"
-            type="submit"> {{isUpade ? 'Update' : 'Save'}}
+            type="submit"> {{isUpdate ? 'Update' : 'Save'}}
         </button>
     </form>
 </mat-card>
