--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,10 @@
             <a mat-button routerLink='/create' routerLinkActive="mat-accent">New Post</a>
         </li>
         <li *ngIf="!authenticated">
-            <a mat-button routerLink='/login' routerLinkActive="mat-accent">Login</a>
+            <a mat-button routerLink='/auth/login' routerLinkActive="mat-accent">Login</a>
         </li>
         <li *ngIf="!authenticated">
-            <a mat-button routerLink='/signup' routerLinkActive="mat-accent">Signup</a>
+            <a mat-button routerLink='/auth/signup' routerLinkActive="mat-accent">Signup</a>
         </li>
         <li *ngIf="authenticated">
             <button mat-button (click)="onLogout()">Logout</button>
